# cs-solution-analyzer

./: .env  problem-list  pyproject.toml  run_mypy.sh  run_mypy_win.sh
src/: __main__.py  get_args.py  id.py  multimap.py  project.py  project_registry.py  solution.py  util.py
src/find_projects/: __main__.py  get_args.py
src/lib/: data_view.py  id.py  multimap.py  parse.py  project.py  project_registry.py  solution.py  var_env.py
src/lib/project/: __init__.py  const.py  parse.py  parse_condition.py  project.py  regexp.py  registry.py  set.py
src/scan_broken/: __main__.py  get_args.py
src/scan_deps/: __main__.py  get_args.py
