[tool.poetry]
name = "py-csharp-analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
